downgrade code to java 18-20